--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.4.1"
   }
 }
